fix: use Collectors.toList() for Java 11 compatibility
Stream.toList() requires Java 16+, but the project targets Java 11.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>